@@ -1174,7 +1174,7 @@ public class PostgresConnectorConfig extends RelationalDatabaseConnectorConfig {
         protected static final List<String> SYSTEM_SCHEMAS = Arrays.asList("pg_catalog", "information_schema");
         // these are tables that may be placed in the user's schema but are system tables. This typically includes modules
         // that install system tables such as the GEO module
-        protected static final List<String> SYSTEM_TABLES = Arrays.asList("spatial_ref_sys");
+        protected static final List<String> SYSTEM_TABLES = List.of("spatial_ref_sys");
         protected static final String TEMP_TABLE_SCHEMA_PREFIX = "pg_temp";
 
         @Override
